Fix footer layout causing horizontal scroll

--- a/resources/assets/sass/_tweaks.scss
+++ b/resources/assets/sass/_tweaks.scss
@@ -48,3 +48,8 @@ p.code {
     }
   }
 }
+
+// Adjust footer padding since we're using it inside a container
+.footer {
+  padding: 3rem 0;
+}
